--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,12 +7,13 @@ variables:
 
 phases:
   pre:
-    messages:
-      success: Yay! Tests passed!
+    description: This is where installing packages happens.
+    target_url: https://www.google.com
     commands:
       - composer install
 
   test:
+    description: This is where tests run
     commands:
       - ./vendor/bin/phpunit
 
