Added false to see what happens

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,6 +16,7 @@ phases:
     description: This is where tests run
     commands:
       - ./vendor/bin/phpunit
+      - false
 
   build:
     commands:
