Added extra post command and description

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -30,7 +30,9 @@ phases:
 
   # The post phase in which we send logs or test data to external sources.
   post:
+    description: This is where your post action happens 
     commands:
+      - ps -a
       - echo "Post phase"
 
   # The deploy phase in which we send our artifacts to a binary repository or rsync data.
