--- a/buildspec.yml
+++ b/buildspec.yml
@@ -27,17 +27,19 @@ phases:
     description: This is where you write your description
     commands:
       - echo "Build phase"
+      - touch test.jar
+      - ls -la
 
   # The post phase in which we send logs or test data to external sources.
   post:
-    description: This is where your post action happens 
+    description: This is where your post action happens
     commands:
       - ps -a
       - echo "Post phase"
 
   # The deploy phase in which we send our artifacts to a binary repository or rsync data.
   deploy:
-    description: This is the deploy phase. 
+    description: This is the deploy phase.
     commands:
       - echo "Deploy phase"
       - ls -l
